added heapsize as parameter